Fix header spacing

--- a/styles.css
+++ b/styles.css
@@ -17,13 +17,14 @@ body {
     font-size: 20px;
     font-weight: 900;
     justify-content: space-between;
+    flex: initial;
+    gap: 16px;
 }
 
 .header-nav {
     display: flex;
     margin: 0;
     padding: 0;
-    gap: 16px;
 }
 
 .container {
